--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>com.github.JaimeTruman</groupId>
+            <artifactId>Java-DDD</artifactId>
+            <version>1.1.7</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
             <version>1.16.5-R0.1-SNAPSHOT</version>
